dorada htmla obavestenja

--- a/backend-organ-vlasti/data/gen/obavestenje.html
+++ b/backend-organ-vlasti/data/gen/obavestenje.html
@@ -3,6 +3,40 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body style="max-width: 550px; margin: auto; border: 1px solid black; padding: 50px;">
+<div style="display: flex; flex-direction: row;">
+<div style="text-align: center;">
+<p style="border-bottom: 1px solid black; margin-bottom: 0;">Naziv organa vlasti</p>
+<p style="border-bottom: 1px solid black; margin-bottom: 0; margin-top: 0;">Novi Sad</p>
+<p style="margin-bottom: 0; margin-top: 0;">
+							(назив и седиште органа)
+						</p>
+<div style="display: flex; flex-direction: row; margin-top: 5px;">
+<div style="text-align: left; margin-right: 5px;">
+<p style="margin-top: 0; margin-bottom: 0;">
+									Број предмета:
+								</p>
+<p style="margin-top: 0;">
+									Датум:
+								</p>
+</div>
+<div>
+<p style="margin-top: 0; margin-bottom: 0; border-bottom: 1px solid black; min-width: 120px;">1234446</p>
+<p style="margin-top: 0; border-bottom: 1px solid black; min-width: 120px;">03.06.2022.</p>
+</div>
+</div>
+</div>
+<div></div>
+</div>
+<div style="display: flex; flex-direction: row;">
+<div style="text-align: center;">
+<p style="border-bottom: 1px solid black; border-top: 1px solid black; margin-bottom: 0;">Dragana Grbic</p>
+<p style="border-bottom: 1px solid black; margin-top: 0; margin-bottom: 0;">Lasla Gala 23, Novi Sad</p>
+<p style="margin-top: 0;">
+							Име и презиме / назив / и адреса подносиоца захтева
+						</p>
+</div>
+<div></div>
+</div>
 <h3 style="text-align: center; font-weight: bold;">
 					О Б А В Е Ш Т Е Њ Е<br>
 					о стављању на увид документа који садржи<br>
