linije za obavestenje dodate

--- a/backend-organ-vlasti/data/gen/obavestenje.html
+++ b/backend-organ-vlasti/data/gen/obavestenje.html
@@ -3,19 +3,39 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body style="max-width: 550px; margin: auto; border: 1px solid black; padding: 50px;">
+<p style="text-align: justify; display: inline; margin-bottom:4px;">
+<span style="width:37%; display: block; height:13pt; border-bottom: 1px solid black;">OQ6Zh9umankOO3XpOv2cDPGzUqxcXw,
+	               	</span><span style="display: block; height:13pt; width:37%; border-bottom: 1px solid black;">cyG26ycqsjxkFuyDr3</span>
+	                (назив и седиште органа)
+	            </p>
+<p style="margin-top: 0; text-align: left; margin-bottom:0px;">
+					Број предмета: <span style="display: inline-block; height:13pt; width:25%; border-bottom: 1px solid black;">op</span>
+</p>
+<p style="margin-top: 0; text-align: left;">
+					Датум: <span style="display: inline-block; margin-left: 50px; height:13pt; width:25%; border-bottom: 1px solid black;">2022-06-03Z</span>
+</p>
+<p style="display: inline; margin-bottom:4px;">
+<span style="width:80%; display: block; height:13pt; border-bottom: 1px solid black;">m&nbsp;&nbsp;&nbsp;&nbsp;
+	               		BfXwyhIv</span><span style="display: block; height:13pt; width:80%; border-bottom: 1px solid black;">U9vs&nbsp;
+	                	v1FfMexybeWHvTg1Fam.wu2&nbsp;
+	                	NcdFzpKQeyGMr_jlY5</span>
+	               	Име и презиме / назив / и адреса подносиоца захтева
+	            </p>
 <h3 style="text-align: center; font-weight: bold;">
 					О Б А В Е Ш Т Е Њ Е<br>
 					о стављању на увид документа који садржи<br>
 					тражену информацију и о изради копије
 				</h3>
-<p style="text-indent: 40px; text-align: justify;">
+<p style="text-indent: 40px; text-align: justify; margin-bottom:4px;">
 					На основу члана 16. ст. 1. Закона о слободном приступу информацијама од јавног значаја, 
 					поступајући по вашем захтеву за слободан приступ информацијама од
 					<span style="border-bottom: 1px solid black;">01.01.2022.</span>
 					год., којим сте тражили увид у документ/е са информацијама о / у вези са:
 				</p>
-<p style="border-bottom: 1px solid black; margin-bottom: 0;">QWVDk4ED0pcGkd5L_NXqs48xhsvl</p>
-<p style="margin-top: 0; text-align: center;">
+<p style="text-align: justify; display: inline;">
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px solid black;">QWVDk4ED0pcGkd5L_NXqs48xhsvl</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px solid black;"></span>
+</p>
+<p style="margin-top: 0; text-align: center; ">
 					(опис тражене информације)
 				</p>
 <p style="text-align: justify">
