--- a/backend-organ-vlasti/data/gen/zalba_cutanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_cutanje.html
@@ -45,7 +45,9 @@
 				године, а којим сам тражио/ла да ми се у складу са Законом о слободном приступу информацијама 
 				од јавног значаја омогући увид- копија документа који садржи информације  о /у вези са :
 				</p>
-<p style="border-bottom: 1px dotted black; margin-bottom: 0;">X7AAKGujUoLSBtg0-</p>
+<p style="text-align: justify; display: inline; word-break: break-all;">
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px dotted black;"></span>
+</p>
 <p style="margin-top: 0; text-align: center;">
 					(навести податке о захтеву и информацији/ама)
 				</p>
