--- a/backend-organ-vlasti/data/gen/zalba_odbijanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_odbijanje.html
@@ -43,6 +43,9 @@
 					године и тако ми ускраћено-онемогућено остваривање уставног и законског права на 
 					слободан приступ информацијама од јавног значаја. Oдлуку побијам у целости, односно у делу којим
 				</p>
+<p style="text-align: justify; display: inline; word-break: break-all;">
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">dkVISd0ewIvnIokPBeWSxmgZlEq</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px dotted black;"></span>
+</p>
 <p style="text-align: justify; margin-bottom: 0;">
 					јер није заснована на Закону о слободном приступу информацијама од јавног значаја.
 				</p>
