--- a/backend-organ-vlasti/data/gen/zalba_cutanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_cutanje.html
@@ -39,14 +39,14 @@
 <br>
 					(подвући  због чега се изјављује жалба)
 				</p>
-<p style="text-align: justify;">
+<p style="text-align: justify; margin-bottom: 4px; ">
 				по мом захтеву  за слободан приступ информацијама од јавног значаја који сам поднео  том органу  дана
 				<span style="border-bottom: 1px dotted black;">18.02.2021.</span>
 				године, а којим сам тражио/ла да ми се у складу са Законом о слободном приступу информацијама 
 				од јавног значаја омогући увид- копија документа који садржи информације  о /у вези са :
 				</p>
-<p style="text-align: justify; display: inline; word-break: break-all;">
-<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px dotted black;"></span>
+<p style="text-align: justify; margin-bottom: 0; margin-top: 4px; word-break: break-all;">
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
 </p>
 <p style="margin-top: 0; text-align: center;">
 					(навести податке о захтеву и информацији/ама)
