--- a/backend-organ-vlasti/data/gen/zalba_odbijanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_odbijanje.html
@@ -36,17 +36,17 @@
 <p style="margin-top: 0;">
 					Број <span style="border-bottom: 1px dotted black;">eUnywlF</span> од <span style="border-bottom: 1px dotted black;">05.06.22.</span> године.
 				</p>
-<p style="text-align: justify; text-indent: 40px;">
+<p style="text-align: justify; text-indent: 40px; margin-bottom: 4px;">
 					Наведеном одлуком органа власти (решењем, закључком, обавештењем у писаној форми са елементима одлуке) , 
 					супротно закону, одбијен-одбачен је мој захтев који сам поднео/ла-упутио/ла дана
 					<span style="border-bottom: 1px dotted black;">25.04.2021.</span>
 					године и тако ми ускраћено-онемогућено остваривање уставног и законског права на 
 					слободан приступ информацијама од јавног значаја. Oдлуку побијам у целости, односно у делу којим
 				</p>
-<p style="text-align: justify; display: inline; word-break: break-all;">
-<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">dkVISd0ewIvnIokPBeWSxmgZlEq</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px dotted black;"></span>
+<p style="text-align: justify; margin-bottom: 0; margin-top: 4px; word-break: break-all;">
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asd asd asd asd asdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasds</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
 </p>
-<p style="text-align: justify; margin-bottom: 0;">
+<p style="text-align: justify; margin-bottom: 0; margin-top: 0;">
 					јер није заснована на Закону о слободном приступу информацијама од јавног значаја.
 				</p>
 <p style="text-align: justify; text-indent: 40px; margin-top: 0; margin-bottom: 0;">
