--- a/backend-organ-vlasti/data/gen/obavestenje.html
+++ b/backend-organ-vlasti/data/gen/obavestenje.html
@@ -48,7 +48,7 @@
 					<span style="border-bottom: 1px solid black;">01.01.2022.</span>
 					год., којим сте тражили увид у документ/е са информацијама о / у вези са:
 				</p>
-<p style="text-align: justify; display: inline; word-break: break-all;">
+<p style="text-align: justify; margin-top: 4px; margin-bottom: 0; word-break: break-all;">
 <span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px solid black;">asdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdasasdasdsadsadasdas</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px solid black;"></span>
 </p>
 <p style="margin-top: 0; text-align: center; ">
