--- a/backend-organ-vlasti/data/gen/zalba_odbijanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_odbijanje.html
@@ -44,7 +44,9 @@
 					слободан приступ информацијама од јавног значаја. Oдлуку побијам у целости, односно у делу којим
 				</p>
 <p style="text-align: justify; margin-bottom: 0; margin-top: 4px; word-break: break-all;">
-<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asd asd asd asd asdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasds</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">sasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsads
+    adasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdas
+    dsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasdsasdasdasdsadsadasds</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
 </p>
 <p style="text-align: justify; margin-bottom: 0; margin-top: 0;">
 					јер није заснована на Закону о слободном приступу информацијама од јавног значаја.
