--- a/backend-organ-vlasti/data/gen/zahtev.html
+++ b/backend-organ-vlasti/data/gen/zahtev.html
@@ -3,7 +3,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body style="max-width: 550px; margin: auto; border: 1px solid black; padding: 50px;">
-<p style="border-bottom: 1px dotted black; margin-bottom: 0; text-align: center;">Naziv organa vlasti, Sediste organa vlasti</p>
+<p style="border-bottom: 1px dotted black; margin-bottom: 0; text-align: center; margin-left: 20px; margin-right: 20px;">Naziv organa vlasti, Sediste organa vlasti</p>
 <p style="margin-top: 0; text-align: center;">
 					назив и седиште органа коме се захтев упућује
 				</p>
@@ -50,7 +50,7 @@
 					Овај захтев се односи на следеће информације:
 				</p>
 <p style="text-align: justify; margin-top: 4px; word-break: break-all; margin-bottom: 0;">
-<span style="display: inline-block; height:13pt; border-bottom: 1px solid black;"><span style="border-bottom: 5px solid white; color: white;">mama</span>asdasdasdsadsadsadasdsadsadasdsadasdasdasdasdasdsadsadsadsadsadasdsadsadasdsadasdasdasdasdsadasdasdsadsadasdsasdasdasdasdasdasdsaasdasdasdsadsadsadasdsadsadasdsadasdasdasdasdasdasdasdasdasdasdsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px solid black;"></span>
+<span style="display: inline-block; height:13pt; border-bottom: 1px solid black;"><span style="border-bottom: 5px solid white; color: white;">mama</span>asdasdasdsadsadsadasdsadsadasds adasdasdasdasdasdsadsadsadsada sdsadasdasdasdasdsadasdasdsadsadasdsasdasdasdasdasdasdsaasdasdasdsadsadsadasdsadsadasdsadasdasdasdasdasdasdasdasdasdasdsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px solid black;"></span>
 </p>
 <p style="text-align: justify; font-size: 12px; margin-top: 0;">
 					(навести што прецизнији опис информације која се тражи као и 
