--- a/backend-organ-vlasti/data/gen/zalba_cutanje.html
+++ b/backend-organ-vlasti/data/gen/zalba_cutanje.html
@@ -46,7 +46,10 @@
 				од јавног значаја омогући увид- копија документа који садржи информације  о /у вези са :
 				</p>
 <p style="text-align: justify; margin-bottom: 0; margin-top: 4px; word-break: break-all;">
-<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsaasdasdasdsadsa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
+<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px dotted black;">asdasdasdsadsaasdasdasdsadsaasdasdasd
+    sdasdasdsadsaasdasdasdsadsaasdasdasdsadsa
+    asdasdsadsadsadsadsadaas
+    asdasdsaaaaaaaa</span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px dotted black;"></span>
 </p>
 <p style="margin-top: 0; text-align: center;">
 					(навести податке о захтеву и информацији/ама)
