sredila xsl fajlove

--- a/backend-poverenik/data/gen/zalbe/3.html
+++ b/backend-poverenik/data/gen/zalbe/3.html
@@ -100,7 +100,7 @@
 				</p>
 <p class="details">
 <span class="line">
-<Detalji xmlns="https://github.com/draganagrbic998/xml/osnova" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">asd<b>asd</b>b</Detalji></span><span class="line"></span><span class="line"></span><span class="line"></span>
+<Detalji xmlns="https://github.com/draganagrbic998/xml/osnova" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"/></span><span class="line"></span><span class="line"></span><span class="line"></span>
 </p>
 <p class="center">
 					(навести податке о захтеву и информацији/ама)
