--- a/backend-organ-vlasti/data/gen/obavestenja/1.html
+++ b/backend-organ-vlasti/data/gen/obavestenja/1.html
@@ -1,104 +1,164 @@
-<html xmlns:organ_vlasti="https://github.com/draganagrbic998/xml/organ_vlasti" xmlns:osnova="https://github.com/draganagrbic998/xml/osnova">
+<html xmlns:obavestenje="https://github.com/draganagrbic998/xml/obavestenje" xmlns:osnova="https://github.com/draganagrbic998/xml/osnova">
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style>
+					body{
+						max-width: 600px; 
+						margin: auto; 
+						border: 1px solid black; 
+						padding: 50px;
+						text-align: justify;
+						font-family: serif;
+					}
+					p{
+						margin: 0;
+					}
+					.center{
+						text-align: center;
+					}
+					.underline{
+						border-bottom: 1px solid black;
+					}
+					.dotted{
+						border-bottom: 1px dotted black;
+					}
+					.bold{
+						font-weight: bold;
+					}
+					.indent{
+						text-indent: 40px;
+					}
+					.line{
+						display: inline-block; 
+						height:13pt; 
+						width:100%; 
+						border-bottom: 1px solid black;
+					}
+					.flex{
+						display: flex; 
+						flex-direction: row; 
+						justify-content: space-between;
+					}
+					.details{
+						word-break: break-all;
+					}
+					.big{
+						font-size: 20px;
+					}
+				</style>
 </head>
-<body style="max-width: 550px; margin: auto; border: 1px solid black; padding: 50px;">
-<div style="display: flex; flex-direction: row;">
-<div style="text-align: center;">
-<p style="border-bottom: 1px solid black; margin-bottom: 0;"></p>
-<p style="border-bottom: 1px solid black; margin-bottom: 0; margin-top: 0;"></p>
-<p style="margin-bottom: 0; margin-top: 0;">
+<body>
+<div class="flex center">
+<div>
+<p class="underline">Naziv organa vlasti</p>
+<p class="underline">Lasla Gala 23, Novi Sad</p>
+<p>
 							(назив и седиште органа)
 						</p>
-<div style="display: flex; flex-direction: row; margin-top: 5px;">
-<div style="text-align: left; margin-right: 5px;">
-<p style="margin-top: 0; margin-bottom: 0;">
+<div class="flex">
+<div style="text-align: left;">
+<p>
 									Број предмета:
 								</p>
-<p style="margin-top: 0;">
+<p>
 									Датум:
 								</p>
 </div>
 <div>
-<p style="margin-top: 0; margin-bottom: 0; border-bottom: 1px solid black; min-width: 120px;"></p>
-<p style="margin-top: 0; border-bottom: 1px solid black; min-width: 120px;">...</p>
+<p style="min-width: 120px;" class="underline">1</p>
+<p style="min-width: 120px;" class="underline">29.12.2020.</p>
 </div>
 </div>
 </div>
 <div></div>
 </div>
-<div style="display: flex; flex-direction: row;">
-<div style="text-align: center;">
-<p style="border-bottom: 1px solid black; border-top: 1px solid black; margin-bottom: 0;"> 
-</p>
-<p style="border-bottom: 1px solid black; margin-top: 0; margin-bottom: 0;"> , </p>
-<p style="margin-top: 0;">
+<br>
+<div class="flex center">
+<div>
+<p style="border-top: 1px solid black;" class="underline">asd asd</p>
+<p class="underline">asd asd, asd</p>
+<p>
 							Име и презиме / назив / и адреса подносиоца захтева
 						</p>
 </div>
 <div></div>
 </div>
-<h3 style="text-align: center; font-weight: bold;">
-					О Б А В Е Ш Т Е Њ Е<br>
-					о стављању на увид документа који садржи<br>
+<br>
+<br>
+<p class="center bold big">
+					О Б А В Е Ш Т Е Њ Е
+				</p>
+<p class="center bold big">
+					о стављању на увид документа који садржи
+				</p>
+<p class="center bold big">
 					тражену информацију и о изради копије
-				</h3>
-<p style="text-indent: 40px; text-align: justify; margin-bottom:4px;">
+				</p>
+<br>
+<p class="indent">
 					На основу члана 16. ст. 1. Закона о слободном приступу информацијама од јавног значаја, 
 					поступајући по вашем захтеву за слободан приступ информацијама од
-					<span style="border-bottom: 1px solid black;">...</span>
+					<span class="underline">29.12.2020.</span>
 					год., којим сте тражили увид у документ/е са информацијама о / у вези са:
 				</p>
-<p style="text-align: justify; margin-top: 4px; margin-bottom: 0; word-break: break-all;">
-<span style="width:100%; display: inline-block; height:13pt; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt; width:100%; border-bottom: 1px solid black;"></span><span style="display: inline-block; height:13pt;width:100%; border-bottom: 1px solid black;"></span>
+<p class="details">
+<span class="line">
+<Detalji xmlns="https://github.com/draganagrbic998/xml/osnova">asd<b>asd</b>
+    </Detalji></span><span class="line"></span><span class="line"></span>
 </p>
-<p style="margin-top: 0; text-align: center; ">
+<p class="center">
 					(опис тражене информације)
 				</p>
-<p style="text-align: justify">
+<br>
+<p>
 					обавештавамо вас да дана
-					<span style="border-bottom: 1px solid black;">...</span>
+					<span class="underline">9.12.2020.</span>
 					, у
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">12:12</span>
 					часова, односно у времену од
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">12:12</span>
 					до
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">14:14</span>
 					часова, у просторијама органа у
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">Novi Sad</span>
 					ул.
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">Lasla Gala</span>
 					бр.
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">23</span>
 					, канцеларија бр.
-					<span style="border-bottom: 1px solid black;"></span>
+					<span class="underline">123</span>
 					можете извршити увид у документ/е у коме је садржана тражена информација. 				
 				</p>
-<p style="text-indent: 40px; text-align: justify;">
+<br>
+<p class="indent">
 					Том приликом, на ваш захтев, може вам се издати и копија документа са траженом информацијом.
 				</p>
-<p style="text-align: justify;">
+<br>
+<p>
 					Трошкови су утврђени Уредбом Владе Републике Србије (&bdquo;Сл. гласник РС&ldquo;, бр. 8/06), и то: 
 					копија стране А4 формата износи 3 динара, А3 формата 6 динара, CD 35 динара, 
 					дискете 20 динара, DVD 40 динара, аудио-касета &ndash; 150 динара, видео-касета 300 динара, 
 					претварање једне стране документа из физичког у електронски облик &ndash; 30 динара.
 				</p>
-<p style="text-indent: 40px; text-align: justify;">
+<br>
+<p class="indent">
 					Износ укупних трошкова израде копије документа по вашем захтеву износи
-					<span style="border-bottom: 1px dotted black;"></span>
+					<span class="dotted">123</span>
 					динара и уплаћује се на жиро-рачун Буџета Републике Србије бр. 840-742328-843-30, 
 					с позивом на број 97 &ndash; ознака шифре општине/града где се налази орган власти 
 					(из Правилника о условима и начину вођења рачуна &ndash; &bdquo;Сл. гласник РС&ldquo;, 20/07... 40/10). 
 				</p>
-<div style="display: flex; flex-direction: row; justify-content: space-between;">
+<br>
+<br>
+<div class="flex">
 <div>
-<p style="margin-bottom: 0;">
+<p>
 							Достављено:
 						</p>
-<p style="margin-bottom: 0; margin-top: 0;">
+<p>
 							1.&nbsp;&nbsp;&nbsp;Именованом 
 						</p>
-<p style="margin-top: 0;">
+<p>
 							2.&nbsp;&nbsp;&nbsp;Архиви
 						</p>
 </div>
@@ -106,10 +166,11 @@
 <p>
 							(М.П.)
 						</p>
-<p style="border-bottom: 1px solid black; margin-bottom: 0; margin-left: 100px; margin-right: 20px;">
+<p style="margin-left: 100px; margin-right: 20px;" class="underline">
+<br>
 <br>
 </p>
-<p style="margin-top: 0; font-size: 14px; margin-left: 30px;">
+<p style="margin-left: 30px;">
 							(потпис овлашћеног лица, односно руководиоца органа)
 						</p>
 </div>
