--- a/backend-organ-vlasti/data/gen/obavestenja/1.html
+++ b/backend-organ-vlasti/data/gen/obavestenja/1.html
@@ -2,13 +2,15 @@
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
-					body{
-						max-width: 600px; 
+					.root{
+						max-width: 700px; 
 						margin: auto; 
 						border: 1px solid black; 
 						padding: 50px;
 						text-align: justify;
 						font-family: serif;
+						background-color: white;
+						box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 					}
 					p{
 						margin: 0;
@@ -30,8 +32,8 @@
 					}
 					.line{
 						display: inline-block; 
-						height:13pt; 
-						width:100%; 
+						height: 13pt; 
+						width: 100%; 
 						border-bottom: 1px solid black;
 					}
 					.flex{
@@ -48,25 +50,26 @@
 				</style>
 </head>
 <body>
+<div class="root">
 <div class="flex center">
 <div>
 <p class="underline">Naziv organa vlasti</p>
 <p class="underline">Lasla Gala 23, Novi Sad</p>
 <p>
-							(назив и седиште органа)
-						</p>
+								(назив и седиште органа)
+							</p>
 <div class="flex">
 <div style="text-align: left;">
 <p>
-									Број предмета:
-								</p>
+										Број предмета:
+									</p>
 <p>
-									Датум:
-								</p>
+										Датум:
+									</p>
 </div>
 <div>
 <p style="min-width: 120px;" class="underline">1</p>
-<p style="min-width: 120px;" class="underline">29.12.2020.</p>
+<p style="min-width: 120px;" class="underline">30.12.2020.</p>
 </div>
 </div>
 </div>
@@ -78,101 +81,101 @@
 <p style="border-top: 1px solid black;" class="underline">asd asd</p>
 <p class="underline">asd asd, asd</p>
 <p>
-							Име и презиме / назив / и адреса подносиоца захтева
-						</p>
+								Име и презиме / назив / и адреса подносиоца захтева
+							</p>
 </div>
 <div></div>
 </div>
 <br>
 <br>
 <p class="center bold big">
-					О Б А В Е Ш Т Е Њ Е
-				</p>
+						О Б А В Е Ш Т Е Њ Е
+					</p>
 <p class="center bold big">
-					о стављању на увид документа који садржи
-				</p>
+						о стављању на увид документа који садржи
+					</p>
 <p class="center bold big">
-					тражену информацију и о изради копије
-				</p>
+						тражену информацију и о изради копије
+					</p>
 <br>
 <p class="indent">
-					На основу члана 16. ст. 1. Закона о слободном приступу информацијама од јавног значаја, 
-					поступајући по вашем захтеву за слободан приступ информацијама од
-					<span class="underline">29.12.2020.</span>
-					год., којим сте тражили увид у документ/е са информацијама о / у вези са:
-				</p>
+						На основу члана 16. ст. 1. Закона о слободном приступу информацијама од јавног значаја, 
+						поступајући по вашем захтеву за слободан приступ информацијама од
+						<span class="underline">30.12.2020.</span>
+						год., којим сте тражили увид у документ/е са информацијама о / у вези са:
+					</p>
 <p class="details">
 <span class="line">
-<Detalji xmlns="https://github.com/draganagrbic998/xml/osnova">asd<b>asd</b>
-    </Detalji></span><span class="line"></span><span class="line"></span>
+<Detalji xmlns="https://github.com/draganagrbic998/xml/osnova"/></span><span class="line"></span><span class="line"></span>
 </p>
 <p class="center">
-					(опис тражене информације)
-				</p>
+						(опис тражене информације)
+					</p>
 <br>
 <p>
-					обавештавамо вас да дана
-					<span class="underline">9.12.2020.</span>
-					, у
-					<span class="underline">12:12</span>
-					часова, односно у времену од
-					<span class="underline">12:12</span>
-					до
-					<span class="underline">14:14</span>
-					часова, у просторијама органа у
-					<span class="underline">Novi Sad</span>
-					ул.
-					<span class="underline">Lasla Gala</span>
-					бр.
-					<span class="underline">23</span>
-					, канцеларија бр.
-					<span class="underline">123</span>
-					можете извршити увид у документ/е у коме је садржана тражена информација. 				
-				</p>
+						обавештавамо вас да дана
+						<span class="underline">2.2.2020.</span>
+						, у
+						<span class="underline">12:12</span>
+						часова, односно у времену од
+						<span class="underline">12:12</span>
+						до
+						<span class="underline">14:14</span>
+						часова, у просторијама органа у
+						<span class="underline">Novi Sad</span>
+						ул.
+						<span class="underline">Lasla Gala</span>
+						бр.
+						<span class="underline">23</span>
+						, канцеларија бр.
+						<span class="underline">123</span>
+						можете извршити увид у документ/е у коме је садржана тражена информација. 				
+					</p>
 <br>
 <p class="indent">
-					Том приликом, на ваш захтев, може вам се издати и копија документа са траженом информацијом.
-				</p>
+						Том приликом, на ваш захтев, може вам се издати и копија документа са траженом информацијом.
+					</p>
 <br>
 <p>
-					Трошкови су утврђени Уредбом Владе Републике Србије (&bdquo;Сл. гласник РС&ldquo;, бр. 8/06), и то: 
-					копија стране А4 формата износи 3 динара, А3 формата 6 динара, CD 35 динара, 
-					дискете 20 динара, DVD 40 динара, аудио-касета &ndash; 150 динара, видео-касета 300 динара, 
-					претварање једне стране документа из физичког у електронски облик &ndash; 30 динара.
-				</p>
+						Трошкови су утврђени Уредбом Владе Републике Србије (&bdquo;Сл. гласник РС&ldquo;, бр. 8/06), и то: 
+						копија стране А4 формата износи 3 динара, А3 формата 6 динара, CD 35 динара, 
+						дискете 20 динара, DVD 40 динара, аудио-касета &ndash; 150 динара, видео-касета 300 динара, 
+						претварање једне стране документа из физичког у електронски облик &ndash; 30 динара.
+					</p>
 <br>
 <p class="indent">
-					Износ укупних трошкова израде копије документа по вашем захтеву износи
-					<span class="dotted">123</span>
-					динара и уплаћује се на жиро-рачун Буџета Републике Србије бр. 840-742328-843-30, 
-					с позивом на број 97 &ndash; ознака шифре општине/града где се налази орган власти 
-					(из Правилника о условима и начину вођења рачуна &ndash; &bdquo;Сл. гласник РС&ldquo;, 20/07... 40/10). 
-				</p>
+						Износ укупних трошкова израде копије документа по вашем захтеву износи
+						<span class="dotted">123</span>
+						динара и уплаћује се на жиро-рачун Буџета Републике Србије бр. 840-742328-843-30, 
+						с позивом на број 97 &ndash; ознака шифре општине/града где се налази орган власти 
+						(из Правилника о условима и начину вођења рачуна &ndash; &bdquo;Сл. гласник РС&ldquo;, 20/07... 40/10). 
+					</p>
 <br>
 <br>
 <div class="flex">
 <div>
 <p>
-							Достављено:
-						</p>
+								Достављено:
+							</p>
 <p>
-							1.&nbsp;&nbsp;&nbsp;Именованом 
-						</p>
+								1.&nbsp;&nbsp;&nbsp;Именованом 
+							</p>
 <p>
-							2.&nbsp;&nbsp;&nbsp;Архиви
-						</p>
+								2.&nbsp;&nbsp;&nbsp;Архиви
+							</p>
 </div>
 <div style="margin-top: 15px;">
 <p>
-							(М.П.)
-						</p>
+								(М.П.)
+							</p>
 <p style="margin-left: 100px; margin-right: 20px;" class="underline">
 <br>
 <br>
 </p>
 <p style="margin-left: 30px;">
-							(потпис овлашћеног лица, односно руководиоца органа)
-						</p>
+								(потпис овлашћеног лица, односно руководиоца органа)
+							</p>
+</div>
 </div>
 </div>
 </body>
