sredila inicijalne podatke

--- a/email-service/data/gen/2.html
+++ b/email-service/data/gen/2.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 					.root{
-						max-width: 600px; 
+						max-width: 700px; 
 						margin: auto; 
 						border: 1px solid black; 
 						padding: 50px;
@@ -46,67 +46,132 @@
 </head>
 <body>
 <div class="root">
-<p style="margin-left: 80px; margin-right: 80px;" class="center dotted">Naziv organa vlasti, Lasla Gala 23, Novi Sad</p>
-<p class="center">
-						назив и седиште органа власти
-					</p>
-<br/>
-<br/>
-<p class="center bold big">
-						РЕШЕЊЕ О ОДБИЈАЊУ ЗАХТЕВА
-					</p>
-<p class="center bold big">
-						ЗА ПРИСТУП ИНФОРМАЦИЈАМА ОД ЈАВНОГ ЗНАЧАЈА
-					</p>
+<div class="flex center">
+<div>
+<p class="underline">Naziv organa vlasti</p>
+<p class="underline">Lasla Gala 23, Novi Sad</p>
 <p>
-						Број решења: 
-						<span class="underline">1</span> 
-						, издат дана
-						<span class="underline">02.02.2021.</span> 
-						године.
-					</p>
-<br/>
-<br/>
-<div style="margin-left: 80px; margin-right: 80px;" class="flex">
-						(<span style="flex: 1;" class="center dotted">Dragana Grbic</span>
+								(назив и седиште органа)
+							</p>
+<div class="flex">
+<div style="text-align: left;">
+<p>
+										Број предмета:
+									</p>
+<p>
+										Датум:
+									</p>
 </div>
-<div style="margin-left: 100px; margin-right: 100px;" class="flex">
-<span style="flex: 1;" class="center dotted">Lasla Gala 23, Novi Sad</span>)
-					</div>
-<p class="center">
-						Име, презиме и адреса тражиоца информација од јавног значаја
-					</p>
+<div>
+<p style="min-width: 120px;" class="underline">1</p>
+<p style="min-width: 120px;" class="underline">02.02.2021.</p>
+</div>
+</div>
+</div>
+<div> </div>
+</div>
 <br/>
+<div class="flex center">
+<div>
+<p style="border-top: 1px solid black;" class="underline">Dragana Grbic</p>
+<p class="underline">Lasla Gala 23, Novi Sad</p>
+<p>
+								Име и презиме / назив / и адреса подносиоца захтева
+							</p>
+</div>
+<div> </div>
+</div>
+<br/>
+<br/>
+<p class="center bold big">
+						О Б А В Е Ш Т Е Њ Е
+					</p>
+<p class="center bold big">
+						о стављању на увид документа који садржи
+					</p>
+<p class="center bold big">
+						тражену информацију и о изради копије
+					</p>
 <br/>
 <p class="indent">
-						Орган власти 
-						<span class="underline">Naziv organa vlasti</span>
-						издаје решење о одбијању <a href="http://localhost:4200/html/zahtevi/1">захтева за информацијама од јавног значаја</a>, које је 
-						<span class="underline">Dragana Grbic</span>
-						поднео/ла дана 
+						На основу члана 16. ст. 1. Закона о слободном приступу информацијама од јавног значаја, 
+						поступајући по вашем <a href="http://localhost:4200/html/zahtevi/1">захтеву за слободан приступ информацијама</a> од
 						<span class="underline">02.02.2021.</span>
-						Обраложење одбијања захтева је следеће:
+						год., којим сте тражили увид у документ/е са информацијама о / у вези са:
 					</p>
 <p>
 <p class="line">
-        <b>asd</b>asd<i>asd</i>
+        <b>asd</b> asd <i>asd</i>
     </p>
 <p class="line"/>
 <p class="line"/>
-<p class="line"/>
-<p class="line"/>
 </p>
+<p class="center">
+						(опис тражене информације)
+					</p>
 <br/>
+<p>
+						обавештавамо вас да дана
+						<span class="underline">02.02.2020.</span>
+						, у
+						<span class="underline">12:12</span>
+						часова, односно у времену од
+						<span class="underline">12:12</span>
+						до
+						<span class="underline">14:14</span>
+						часова, у просторијама органа у
+						<span class="underline">Novi Sad</span>
+						ул.
+						<span class="underline">Lasla Gala</span>
+						бр.
+						<span class="underline">23</span>
+						, канцеларија бр.
+						<span class="underline">asd</span>
+						можете извршити увид у документ/е у коме је садржана тражена информација. 				
+					</p>
 <br/>
+<p class="indent">
+						Том приликом, на ваш захтев, може вам се издати и копија документа са траженом информацијом.
+					</p>
+<br/>
+<p>
+						Трошкови су утврђени Уредбом Владе Републике Србије („Сл. гласник РС“, бр. 8/06), и то: 
+						копија стране А4 формата износи 3 динара, А3 формата 6 динара, CD 35 динара, 
+						дискете 20 динара, DVD 40 динара, аудио-касета – 150 динара, видео-касета 300 динара, 
+						претварање једне стране документа из физичког у електронски облик – 30 динара.
+					</p>
+<br/>
+<p class="indent">
+						Износ укупних трошкова израде копије документа по вашем захтеву износи
+						<span class="dotted">123</span>
+						динара и уплаћује се на жиро-рачун Буџета Републике Србије бр. 840-742328-843-30, 
+						с позивом на број 97 – ознака шифре општине/града где се налази орган власти 
+						(из Правилника о условима и начину вођења рачуна – „Сл. гласник РС“, 20/07... 40/10). 
+					</p>
 <br/>
 <br/>
 <div class="flex">
-<div> </div>
 <div>
+<p>
+								Достављено:
+							</p>
+<p>
+								1.   Именованом 
+							</p>
+<p>
+								2.   Архиви
+							</p>
+</div>
+<div>
+<br/>
+<p>
+								(М.П.)
+							</p>
+<br/>
 <p style="margin-left: 100px; margin-right: 20px;" class="underline center">
 								 
 							</p>
-<p>
+<p style="margin-left: 30px;">
 								(потпис овлашћеног лица, односно руководиоца органа)
 							</p>
 </div>
