--- a/email-service/data/gen/4.html
+++ b/email-service/data/gen/4.html
@@ -88,7 +88,9 @@
 						Обраложење одбијања захтева је следеће:
 					</p>
 <p>
-<p class="line">asd</p>
+<p class="line">
+        <b>asd</b> asd <i>asd</i>
+    </p>
 <p class="line"/>
 <p class="line"/>
 <p class="line"/>
